# homebrew-pre-commit-tap-hooks

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml
cmd/: audit-pre-commit  brew-audit-pre-commit
homebrew_pre_commit_tap_hooks/: brew_audit_pre_commit.py  log.py  utils.py
pre_commit_homebrew_tap/: brew_audit_pre_commit.py  utils.py
