[build-system]
requires = ["setuptools>=61", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "homebrew-pre-commit-tap-hooks"
dynamic = ["version"]
authors = [
    {name = "Sardorbek Imomaliev", email = "imomaliev@hey.com"},
    {name = "Jevin Sweval", email = "jevinsweval@gmail.com"},
]
description = "pre-commit hooks for Homebrew taps"
readme = {file = 'README.md', content-type='text/markdown'}
requires-python = ">=3.8"
keywords = ["pre-commit", "homebrew", "brew", "tap"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "rich",
    "path",
]

[project.urls]
repository = "https://github.com/jevinskie/homebrew-pre-commit-tap-hooks"

[project.scripts]
"brew-audit-pre-commit.py" = "homebrew_pre_commit_tap_hooks.brew_audit_pre_commit:main"

[tool.setuptools.dynamic]
version = {attr = "homebrew_pre_commit_tap_hooks._version.__version__"}

[tool.setuptools_scm]
version_file = "homebrew_pre_commit_tap_hooks/_version.py"

[tool.setuptools]
zip-safe = true
packages = ["homebrew_pre_commit_tap_hooks"]
